# infinityauth_backend

./: .gitignore  Cargo.toml  Dockerfile  app.py  app_local.py  build.sh  devimports.py  dockerentry.sh  fapp.py  requirements.txt
azure_tools/: Cargo.toml
azure_tools/src/: lib.rs
azure_tools/src/credentials/: mod.rs
azure_tools/src/myazure/: constants.rs  mod.rs  storage.rs  tables.rs
infinity_tools/: Cargo.toml
infinity_tools/src/: lib.rs
pyapp/: __init__.py  flasktools.py
pyapp/api/: __init__.py
pyapp/api/applications/: get.py
pyapp/api/licences/: get.py
pyapp/api/organizations/: get.py
pyapp/api/users/: get.py  post.py
pyapp/params/: user.py
pyapp/storages/: __init__.py
pyapp/storages/azure/: __init__.py  users_storage.py
src-actix/: Cargo.toml
src-actix/src/: main.rs
src-actix/src/api/: mod.rs
src-actix/src/api/applications/: _get.rs  mod.rs
src-actix/src/api/licences/: _get.rs  _post.rs
src-actix/src/api/organizations/: _get.rs  _post.rs
src-actix/src/api/users/: _get.rs  _post.rs  mod.rs
src-actix/src/clouds/: mod.rs
src-actix/src/clouds/azure/: mod.rs
src-actix/src/constants/: json_entities.rs  mod.rs  tables.rs
src-actix/src/responses/: mod.rs
static/: index.html
